infrastructure/base/kyverno/policies/restrict-default-namespace.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-default-namespace
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/title: Disallow Default Namespace
    policies.kyverno.io/category: Multi-Tenancy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Kubernetes Namespaces are an optional feature that provide a way to segment and
      isolate cluster resources across multiple applications and users. As a best
      practice, workloads should be isolated with Namespaces. Namespaces should be required
      and the default (empty) Namespace should not be used. This policy validates that Pods
      specify a Namespace name other than `default`. Rule auto-generation is disabled here
      due to Pod controllers need to specify the `namespace` field under the top-level `metadata`
      object and not at the Pod template level.   
spec:
  validationFailureAction: Enforce
  rules:
    - name: deny-default-namespace
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - "default"
      validate:
        message: "Deployments in the default namespace are not allowed."
        deny: {}

  #Reference https://kyverno.io/policies/best-practices/disallow-default-namespace/disallow-default-namespace/
