infrastructure/base/kyverno/policies/restrict-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
  annotations:
    policies.kyverno.io/title: Restrict Image Registries
    policies.kyverno.io/category: Best Practices, EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Images from unknown, public registries can be of dubious quality and may not be
      scanned and secured, representing a high degree of risk. Requiring use of known, approved
      registries helps reduce threat exposure by ensuring image pulls only come from them. This
      policy validates that container images only originate from the registry `eu.foo.io` or
      `bar.io`. Use of this policy requires customization to define your allowable registries.
spec:
  validationFailureAction: Enforce
  rules:
    - name: enforce-approved-registries
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Only approved registries are allowed."
        anyPattern:
          - spec:
            containers:
              - image: "harbor.example.com/*"

		#Replace harbor.example.com/* with your Container Repo
    #Reference https://kyverno.io/policies/best-practices/restrict-image-registries/restrict-image-registries/
