infrastructure/base/kyverno/policies/restrict-sa-token-mounting.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-sa-token-mounting
  annotations:
    policies.kyverno.io/title: Restrict Auto-Mount of Service Account Tokens
    policies.kyverno.io/category: Sample, EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod,ServiceAccount
    policies.kyverno.io/description: >-
      Kubernetes automatically mounts ServiceAccount credentials in each Pod.
      The ServiceAccount may be assigned roles allowing Pods to access API resources.
      Blocking this ability is an extension of the least privilege best practice and should
      be followed if Pods do not need to speak to the API server to function.
      This policy ensures that mounting of these ServiceAccount tokens is blocked. 
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-sa-token-mount
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Auto-mounting of service account tokens is not allowed."
        pattern:
          spec:
            automountServiceAccountToken: false

  #Reference https://kyverno.io/policies/other/restrict-automount-sa-token/restrict-automount-sa-token/
